# monacalc

./: alembic.ini  docker-compose.yaml  pyproject.toml
database/: Dockerfile
frontend/: main.py
migrations/: env.py
migrations/versions/: 41dd4afb9418_first_revision.py
models/: contract.py  school.py
repository/: objects.py  repo.py
requests/: base.py
requests/models/: contract.py  school.py
responses/: __init__.py  responses.py
templates/: base.html  create_contract.html  index.html  list_contracts.html  navbar.html
tests/: conftest.py
tests/models/: test_contract.py
tests/repository/: test_repo.py
use_cases/: contract.py  school.py
