[tool.poetry]
name = "monacalc"
version = "0.1.0"
description = "Just Monalise's salary calculator"
authors = ["André Carvalho <alac1984@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.39"
fastapi = "^0.79.0"
Jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.3"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.3"
mypy = "^0.971"
black = "^22.6.0"
flake8 = "^5.0.4"
pytest = "^7.1.2"
alembic = "^1.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
